--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-```html
+html
 <!DOCTYPE html>
 <html lang="tr">
 <head>
@@ -40,4 +40,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-```
