--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
   
-  <!-- Giriş Ekranı -->
   <div id="loginScreen">
     <div class="loginBox">
       <h1>SLITHER.IO</h1>
@@ -17,11 +16,9 @@
     </div>
   </div>
 
-  <!-- Oyun Ekranı -->
   <div id="gameScreen" style="display: none;">
     <canvas id="gameCanvas"></canvas>
     
-    <!-- Skor Tablosu -->
     <div id="leaderboard">
       <h3>Lider Tablosu</h3>
       <ol id="leaderboardList"></ol>
@@ -32,9 +29,11 @@
       <div id="joystickBase"></div>
       <div id="joystickStick"></div>
     </div>
+    
+    <!-- Mobil Boost Button -->
+    <div id="boostButton">⚡ BOOST</div>
   </div>
 
-  <!-- Socket.io Client -->
   <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
 </body>
